@@ -22,7 +22,7 @@
             <GridPane hgap="5.0" vgap="5.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="30.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="25.0" />
                   <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
                   <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
                   <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
@@ -31,13 +31,14 @@
               <rowConstraints>
                   <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
                   <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
                 <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="ALWAYS" />
-                  <RowConstraints fillHeight="false" maxHeight="35.0" minHeight="-Infinity" prefHeight="35.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="NEVER" />
+                  <RowConstraints fillHeight="false" minHeight="-Infinity" valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
                   <Label text="Config name" GridPane.columnSpan="2" GridPane.halignment="LEFT" />
@@ -53,9 +54,9 @@
                   </TitledPane>
                   <Label text="Topic config" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
                   <ComboBox fx:id="topicConfigComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                  <Button fx:id="clearButon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearButtonOnAction" text="Clear" GridPane.columnIndex="5" GridPane.rowIndex="8" />
-                  <Button fx:id="startButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startButtonOnAction" text="Start" GridPane.rowIndex="8" />
-                  <Button fx:id="stopButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stopButtonOnAction" text="Stop" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+                  <Button fx:id="clearButon" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearButtonOnAction" text="Clear" GridPane.columnIndex="5" GridPane.rowIndex="9" />
+                  <Button fx:id="startButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#startButtonOnAction" text="Start" GridPane.rowIndex="9" />
+                  <Button fx:id="stopButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#stopButtonOnAction" text="Stop" GridPane.columnIndex="2" GridPane.rowIndex="9" />
                   <Label text="Consumer group" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
                   <TextField fx:id="consumerGroupTextField" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                   <Label text="Fetch timeout (ms)" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
@@ -65,7 +66,8 @@
                   <ToggleButton fx:id="detachPaneButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#detachButtonOnAction" text="Detach" GridPane.columnIndex="5" />
                   <CheckBox fx:id="receiveMsgLimitCheckBox" mnemonicParsing="false" text="Receive limit" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" />
                   <TextField fx:id="receiveMsgLimitTextField" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                  <Label fx:id="statusLabel" text="Assigned paritions: &lt;DISCONNECTED FROM BROKER&gt;" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
+                  <Label fx:id="statusLabel" contentDisplay="CENTER" text="Assigned paritions: &lt;DISCONNECTED FROM BROKER&gt; " wrapText="true" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="8" GridPane.valignment="CENTER" GridPane.vgrow="SOMETIMES" />
+                  <Label fx:id="receivedTotalMsgLabel" text="Received msg total: &lt;DISCONNECTED FROM BROKER&gt;" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
